{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 71,
  "lineage": "1ba1ad88-7642-cb38-cbe5-f79b3994524a",
  "resources": [
    {
      "module": "module.network_interface",
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "backend",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/7e2f7ebf-5ecb-4eb7-b323-9c9b4dc33557/resourceGroups/rg-hub-dev/providers/Microsoft.Network/publicIPAddresses/backend-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.169.235.66",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "backend-ip",
            "resource_group_name": "rg-hub-dev",
            "sku": "Standard"
          }
        },
        {
          "index_key": "database",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/7e2f7ebf-5ecb-4eb7-b323-9c9b4dc33557/resourceGroups/rg-hub-dev/providers/Microsoft.Network/publicIPAddresses/database-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.172.252.33",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "database-ip",
            "resource_group_name": "rg-hub-dev",
            "sku": "Standard"
          }
        },
        {
          "index_key": "frontend",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/7e2f7ebf-5ecb-4eb7-b323-9c9b4dc33557/resourceGroups/rg-hub-dev/providers/Microsoft.Network/publicIPAddresses/frontend-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.231.85.26",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "frontend-ip",
            "resource_group_name": "rg-hub-dev",
            "sku": "Standard"
          }
        }
      ]
    },
    {
      "module": "module.network_interface",
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "backend",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/7e2f7ebf-5ecb-4eb7-b323-9c9b4dc33557/resourceGroups/rg-hub-dev/providers/Microsoft.Network/virtualNetworks/vnet-hub-dev/subnets/backend-subnet",
            "name": "backend-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-hub-dev",
            "virtual_network_name": "vnet-hub-dev"
          }
        },
        {
          "index_key": "database",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.3.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/7e2f7ebf-5ecb-4eb7-b323-9c9b4dc33557/resourceGroups/rg-hub-dev/providers/Microsoft.Network/virtualNetworks/vnet-hub-dev/subnets/database-subnet",
            "name": "database-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-hub-dev",
            "virtual_network_name": "vnet-hub-dev"
          }
        },
        {
          "index_key": "frontend",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/7e2f7ebf-5ecb-4eb7-b323-9c9b4dc33557/resourceGroups/rg-hub-dev/providers/Microsoft.Network/virtualNetworks/vnet-hub-dev/subnets/frontend-subnet",
            "name": "frontend-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-hub-dev",
            "virtual_network_name": "vnet-hub-dev"
          }
        }
      ]
    },
    {
      "module": "module.network_interface",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "backend",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/7e2f7ebf-5ecb-4eb7-b323-9c9b4dc33557/resourceGroups/rg-hub-dev/providers/Microsoft.Network/networkInterfaces/backend-nic",
            "internal_domain_name_suffix": "0pggdmdh110uhjd2klf1utxbug.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/7e2f7ebf-5ecb-4eb7-b323-9c9b4dc33557/resourceGroups/rg-hub-dev/providers/Microsoft.Network/publicIPAddresses/backend-ip",
                "subnet_id": "/subscriptions/7e2f7ebf-5ecb-4eb7-b323-9c9b4dc33557/resourceGroups/rg-hub-dev/providers/Microsoft.Network/virtualNetworks/vnet-hub-dev/subnets/backend-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "name": "backend-nic",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "rg-hub-dev"
          },
          "dependencies": [
            "module.network_interface.data.azurerm_public_ip.public_ip",
            "module.network_interface.data.azurerm_subnet.subnet",
            "module.public_ip.azurerm_public_ip.public_ip",
            "module.resource_group.azurerm_resource_group.rg_block",
            "module.subnet.azurerm_subnet.subnet_block",
            "module.virtualnetwork.azurerm_virtual_network.vnet_block"
          ]
        },
        {
          "index_key": "database",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/7e2f7ebf-5ecb-4eb7-b323-9c9b4dc33557/resourceGroups/rg-hub-dev/providers/Microsoft.Network/networkInterfaces/database-nic",
            "internal_domain_name_suffix": "0pggdmdh110uhjd2klf1utxbug.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig",
                "primary": true,
                "private_ip_address": "10.0.3.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/7e2f7ebf-5ecb-4eb7-b323-9c9b4dc33557/resourceGroups/rg-hub-dev/providers/Microsoft.Network/publicIPAddresses/database-ip",
                "subnet_id": "/subscriptions/7e2f7ebf-5ecb-4eb7-b323-9c9b4dc33557/resourceGroups/rg-hub-dev/providers/Microsoft.Network/virtualNetworks/vnet-hub-dev/subnets/database-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "name": "database-nic",
            "private_ip_address": "10.0.3.4",
            "private_ip_addresses": [
              "10.0.3.4"
            ],
            "resource_group_name": "rg-hub-dev"
          },
          "dependencies": [
            "module.network_interface.data.azurerm_public_ip.public_ip",
            "module.network_interface.data.azurerm_subnet.subnet",
            "module.public_ip.azurerm_public_ip.public_ip",
            "module.resource_group.azurerm_resource_group.rg_block",
            "module.subnet.azurerm_subnet.subnet_block",
            "module.virtualnetwork.azurerm_virtual_network.vnet_block"
          ]
        },
        {
          "index_key": "frontend",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/7e2f7ebf-5ecb-4eb7-b323-9c9b4dc33557/resourceGroups/rg-hub-dev/providers/Microsoft.Network/networkInterfaces/frontend-nic",
            "internal_domain_name_suffix": "0pggdmdh110uhjd2klf1utxbug.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/7e2f7ebf-5ecb-4eb7-b323-9c9b4dc33557/resourceGroups/rg-hub-dev/providers/Microsoft.Network/publicIPAddresses/frontend-ip",
                "subnet_id": "/subscriptions/7e2f7ebf-5ecb-4eb7-b323-9c9b4dc33557/resourceGroups/rg-hub-dev/providers/Microsoft.Network/virtualNetworks/vnet-hub-dev/subnets/frontend-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "name": "frontend-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "rg-hub-dev"
          },
          "dependencies": [
            "module.network_interface.data.azurerm_public_ip.public_ip",
            "module.network_interface.data.azurerm_subnet.subnet",
            "module.public_ip.azurerm_public_ip.public_ip",
            "module.resource_group.azurerm_resource_group.rg_block",
            "module.subnet.azurerm_subnet.subnet_block",
            "module.virtualnetwork.azurerm_virtual_network.vnet_block"
          ]
        }
      ]
    },
    {
      "module": "module.network_securitygroup",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_block",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "nsg1",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7e2f7ebf-5ecb-4eb7-b323-9c9b4dc33557/resourceGroups/rg-hub-dev/providers/Microsoft.Network/networkSecurityGroups/nsg-hub-dev",
            "location": "eastus",
            "name": "nsg-hub-dev",
            "resource_group_name": "rg-hub-dev",
            "security_rule": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resource_group.azurerm_resource_group.rg_block",
            "module.subnet.azurerm_subnet.subnet_block",
            "module.virtualnetwork.azurerm_virtual_network.vnet_block"
          ]
        }
      ]
    },
    {
      "module": "module.public_ip",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "backend",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/7e2f7ebf-5ecb-4eb7-b323-9c9b4dc33557/resourceGroups/rg-hub-dev/providers/Microsoft.Network/publicIPAddresses/backend-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.169.235.66",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "backend-ip",
            "resource_group_name": "rg-hub-dev",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.rg_block"
          ]
        },
        {
          "index_key": "database",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/7e2f7ebf-5ecb-4eb7-b323-9c9b4dc33557/resourceGroups/rg-hub-dev/providers/Microsoft.Network/publicIPAddresses/database-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.172.252.33",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "database-ip",
            "resource_group_name": "rg-hub-dev",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.rg_block"
          ]
        },
        {
          "index_key": "frontend",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/7e2f7ebf-5ecb-4eb7-b323-9c9b4dc33557/resourceGroups/rg-hub-dev/providers/Microsoft.Network/publicIPAddresses/frontend-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.231.85.26",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "frontend-ip",
            "resource_group_name": "rg-hub-dev",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.rg_block"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "route_table_block",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "routetable1",
          "schema_version": 0,
          "attributes": {
            "bgp_route_propagation_enabled": true,
            "id": "/subscriptions/7e2f7ebf-5ecb-4eb7-b323-9c9b4dc33557/resourceGroups/rg-hub-dev/providers/Microsoft.Network/routeTables/route-table-hub-dev",
            "location": "eastus",
            "name": "route-table-hub-dev",
            "resource_group_name": "rg-hub-dev",
            "route": [
              {
                "address_prefix": "10.1.0.0/16",
                "name": "route1",
                "next_hop_in_ip_address": "",
                "next_hop_type": "VnetLocal"
              }
            ],
            "subnets": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_securitygroup.azurerm_network_security_group.nsg_block",
            "module.resource_group.azurerm_resource_group.rg_block",
            "module.subnet.azurerm_subnet.subnet_block",
            "module.virtualnetwork.azurerm_virtual_network.vnet_block"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_block",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "subnets1",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/7e2f7ebf-5ecb-4eb7-b323-9c9b4dc33557/resourceGroups/rg-hub-dev/providers/Microsoft.Network/virtualNetworks/vnet-hub-dev/subnets/frontend-subnet",
            "name": "frontend-subnet",
            "network_security_group_id_wo_version": 0,
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-hub-dev",
            "route_table_id_wo_version": 0,
            "virtual_network_name": "vnet-hub-dev"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.rg_block",
            "module.virtualnetwork.azurerm_virtual_network.vnet_block"
          ]
        },
        {
          "index_key": "subnets2",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/7e2f7ebf-5ecb-4eb7-b323-9c9b4dc33557/resourceGroups/rg-hub-dev/providers/Microsoft.Network/virtualNetworks/vnet-hub-dev/subnets/backend-subnet",
            "name": "backend-subnet",
            "network_security_group_id_wo_version": 0,
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-hub-dev",
            "route_table_id_wo_version": 0,
            "virtual_network_name": "vnet-hub-dev"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.rg_block",
            "module.virtualnetwork.azurerm_virtual_network.vnet_block"
          ]
        },
        {
          "index_key": "subnets3",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.3.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/7e2f7ebf-5ecb-4eb7-b323-9c9b4dc33557/resourceGroups/rg-hub-dev/providers/Microsoft.Network/virtualNetworks/vnet-hub-dev/subnets/database-subnet",
            "name": "database-subnet",
            "network_security_group_id_wo_version": 0,
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-hub-dev",
            "route_table_id_wo_version": 0,
            "virtual_network_name": "vnet-hub-dev"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.rg_block",
            "module.virtualnetwork.azurerm_virtual_network.vnet_block"
          ]
        }
      ]
    },
    {
      "module": "module.virtual_machine",
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "vm01",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/7e2f7ebf-5ecb-4eb7-b323-9c9b4dc33557/resourceGroups/rg-hub-dev/providers/Microsoft.Network/virtualNetworks/vnet-hub-dev/subnets/frontend-subnet",
            "name": "frontend-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-hub-dev",
            "virtual_network_name": "vnet-hub-dev"
          }
        },
        {
          "index_key": "vm02",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/7e2f7ebf-5ecb-4eb7-b323-9c9b4dc33557/resourceGroups/rg-hub-dev/providers/Microsoft.Network/virtualNetworks/vnet-hub-dev/subnets/backend-subnet",
            "name": "backend-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-hub-dev",
            "virtual_network_name": "vnet-hub-dev"
          }
        },
        {
          "index_key": "vm03",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.3.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/7e2f7ebf-5ecb-4eb7-b323-9c9b4dc33557/resourceGroups/rg-hub-dev/providers/Microsoft.Network/virtualNetworks/vnet-hub-dev/subnets/database-subnet",
            "name": "database-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-hub-dev",
            "virtual_network_name": "vnet-hub-dev"
          }
        }
      ]
    },
    {
      "module": "module.virtualnetwork",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet_block",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "vnet1",
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "b061ccd3-de67-43f5-a47c-52cbba4ee1a6",
            "id": "/subscriptions/7e2f7ebf-5ecb-4eb7-b323-9c9b4dc33557/resourceGroups/rg-hub-dev/providers/Microsoft.Network/virtualNetworks/vnet-hub-dev",
            "location": "eastus",
            "name": "vnet-hub-dev",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "rg-hub-dev",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/7e2f7ebf-5ecb-4eb7-b323-9c9b4dc33557/resourceGroups/rg-hub-dev/providers/Microsoft.Network/virtualNetworks/vnet-hub-dev/subnets/frontend-subnet",
                "name": "frontend-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              },
              {
                "address_prefixes": [
                  "10.0.2.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/7e2f7ebf-5ecb-4eb7-b323-9c9b4dc33557/resourceGroups/rg-hub-dev/providers/Microsoft.Network/virtualNetworks/vnet-hub-dev/subnets/backend-subnet",
                "name": "backend-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              },
              {
                "address_prefixes": [
                  "10.0.3.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/7e2f7ebf-5ecb-4eb7-b323-9c9b4dc33557/resourceGroups/rg-hub-dev/providers/Microsoft.Network/virtualNetworks/vnet-hub-dev/subnets/database-subnet",
                "name": "database-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ]
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.rg_block"
          ]
        }
      ]
    }
  ]
}